src/snapshots/jjpwrgem__cli__tests__unexpected_escaped_character.snap
---
source: src/cli.rs
expression: annotated
---
error: unexpected character `\u000B`. expected start of a json value
 --> stdin:1:1
  |
1 | â‹
  | ^
